# manifest

./: .gitignore  API.md  CHEATSHEET_v3.3.md  DOCUMENTATION_v3.3.md  README.md  cheatsheet.md  conftest.py  id_sidecar.py  manifest.py  manifest_core.py  pyproject.toml  revert2clean.py  storage.py
config/: integration.yaml  shortcuts.yaml
docs/: API.md  CHEATSHEET.md  MANIFEST_MANAGER_COMPREHENSIVE_REVIEW.md  Manifest Manager Cheatsheet.md  README.md  manifest_documentation.md
src/manifest_manager/: __init__.py  __main__.py  calendar.py  config.py  dataframe_commands.py  dataframe_conversion.py  manifest.py  manifest_core.py  storage.py  verify_package.py
src/shared/: __init__.py  dates.py  id_generator.py  integration_config.py  locking.py  manifest_bridge.py  status_map.py
src/shared/calendar/: __init__.py  ics_writer.py
src/smart_scheduler/: __init__.py  __main__.py  cli.py  config.py  models.py
src/smart_scheduler/services/: calendar_service.py  maintenance_service.py  task_service.py
src/smart_scheduler/storage/: base.py  factory.py  json_store.py  sqlite_store.py
tests/: test_add_returns_id.py  test_config.py  test_core.py  test_dataframe_conversion.py  test_due_attribute.py  test_edge_cases.py  test_encryption.py  test_export_calendar_ids.py  test_id_sidecar.py  test_integration_v34.py  test_load_aliases.py  test_manifest.py  test_manifest_core_integration.py  test_move_node.py  test_parent_id_shortcut.py  test_phase3_shortcuts.py  test_shell.py  test_storage.py
tests/integration/: test_integration.py  test_integration_features.py
tests/shared/: test_ics_writer.py  test_id_generator.py  test_locking.py
tests/smart_scheduler/: test_scheduler.py
