[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manifest-manager"
version = "3.4.0"
description = "Hierarchical XML data management CLI"
requires-python = ">=3.8"
dependencies = [
    "lxml>=4.9.0",
    "py7zr>=0.20.0",
    "pyyaml>=6.0",
]

[project.scripts]
manifest = "manifest_manager.__main__:main"

# --- IMPROVED SECTION ---
[tool.setuptools.packages.find]
where = ["src"]  # Automatically finds ALL packages inside src

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]