[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grove"
version = "2.0.0"
description = "A Productivity Suite containing a Manifest Manager and a Smart Scheduler"
requires-python = ">=3.8"
dependencies = [
    "lxml>=4.9.0",
    "py7zr>=0.20.0",
    "pyyaml>=6.0",
]

[project.scripts]
manifest  = "manifest_manager.__main__:main"
mnft  = "manifest_manager.__main__:main"
scheduler = "smart_scheduler.__main__:main"
schd = "smart_scheduler.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]  # Auto-discovers manifest_manager, smart_scheduler, shared

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
